k3s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haylugar-backend
  labels:
    app: haylugar-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: haylugar-backend
  template:
    metadata:
      labels:
        app: haylugar-backend
    spec:
      containers:
        - name: haylugar-backend
          image: 711387108282.dkr.ecr.sa-east-1.amazonaws.com/haylugar-backend:prod-1.0.3
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.3"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
