k3s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haylugar-backend
spec:
  type: NodePort
  selector:
    app: haylugar-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
