k3s/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: haylugar-backend-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
      - http:
          paths:
            - path: /
              backend:
                serviceName: haylugar-backend-service
                servicePort: http
